final draft, fixed image out of bound issue

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -63,3 +63,9 @@ form > p {
   font-family: Copperplate, Papyrus, fantasy;
   font-weight: bold;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+}
